- Fixed crash when clicking in Icon column header [https://github.com/clechasseur/pathcopycopy/issues/142]
- New custom command element to display command when files and/or folders are selected [https://github.com/clechasseur/pathcopycopy/issues/125]
- Better support for high DPI monitors [https://github.com/clechasseur/pathcopycopy/issues/131]


Version 19.0 (2020-08-08)
-------------------------
- Application is now localizable. Now ships with English and French versions. [https://github.com/clechasseur/pathcopycopy/issues/107]
- Paths can now be copied recursively. Available globally or as a custom command option. [https://github.com/clechasseur/pathcopycopy/issues/2]
- New button to duplicate a custom command [https://github.com/clechasseur/pathcopycopy/issues/114]
- New custom command element to inject drive's label into path (expert only) [https://github.com/clechasseur/pathcopycopy/issues/108]
- New custom command element to copy the first or last N parts of the path (expert only) [https://github.com/clechasseur/pathcopycopy/issues/84]
- New custom command elements to push/pop data on a stack as well as manipulate stack values (expert only) [https://github.com/clechasseur/pathcopycopy/issues/89]
- New custom command element to launch a command-line (arguments can be specified) (expert only) [https://github.com/clechasseur/pathcopycopy/issues/122]
- Registry value (WSLPathPrefix) to configure the prefix for WSL paths [https://github.com/clechasseur/pathcopycopy/issues/117]
- Icon selected for Copy Long Path command now shows up in main menu too [https://github.com/clechasseur/pathcopycopy/issues/110]
- Following symbolic links work even if the symbolic link is part of the path and not its target [https://github.com/clechasseur/pathcopycopy/issues/118]
- By default, checking for updates will now be performed every 24 hours (instead of every week)
- Development builds produced by CI will correctly update to the latest version even if the same

