@@ -65,9 +65,12 @@ namespace PCC
 
             std::wstring path(p_File);
             if (!path.empty()) {
-                std::wstring longPath(MAX_PATH + 1, L'\0');
-                if (::GetLongPathNameW(p_File.c_str(), &*longPath.begin(), gsl::narrow<DWORD>(longPath.size())) != 0) {
-                    path = longPath.c_str();
+                const auto bufferSize = ::GetLongPathNameW(p_File.c_str(), nullptr, 0);
+                if (bufferSize != 0) {
+                    std::wstring longPath(bufferSize, L'\0');
+                    if (::GetLongPathNameW(p_File.c_str(), &*longPath.begin(), gsl::narrow<DWORD>(longPath.size())) != 0) {
+                        path = longPath.c_str();
+                    }
                 }
 
                 // Append separator if needed.
